--- a/base/html/crossroads_stats_primitive.html
+++ b/base/html/crossroads_stats_primitive.html
@@ -69,6 +69,18 @@
                     <input type="date" class="input-date" data-end="date-end" />
                   </div>
                   <!-- //date-group -->
+
+                  <div class="ui checkbox primary-chkbox md c-bluesky">
+                    <input id="chk1" type="checkbox" />
+                    <label for="chk1">주말 제외</label>
+                  </div>
+                  <!-- //checkbox -->
+                  <div class="ui checkbox primary-chkbox md c-bluesky">
+                    <input id="chk2" type="checkbox" />
+                    <label for="chk2">공휴일 제외</label>
+                  </div>
+                  <!-- //checkbox -->
+
                   <button class="btn-data-search">검색</button>
                 </div>
                 <!-- //inner -->
