--- a/base/html/dashboard_cr_status.html
+++ b/base/html/dashboard_cr_status.html
@@ -88,7 +88,7 @@
                   <div class="state-chart">
                     <!-- 차트 사이즈 : 125(px) X 95(px) -->
                     <img
-                      src="https://www.dummyimage.com/125x95/ddd/000.png&amp;text=Chart+Area"
+                      src="https://www.dummyimage.com/125x95/fcfcfc/000.png&amp;text=Chart+Area"
                       alt="퍼블리싱 확인용 더미 이미지"
                       class="dummy-img"
                     />
@@ -107,7 +107,7 @@
                   <div class="state-chart">
                     <!-- 차트 사이즈 : 125(px) X 95(px) -->
                     <img
-                      src="https://www.dummyimage.com/125x95/ddd/000.png&amp;text=Chart+Area"
+                      src="https://www.dummyimage.com/125x95/fcfcfc/000.png&amp;text=Chart+Area"
                       alt="퍼블리싱 확인용 더미 이미지"
                       class="dummy-img"
                     />
@@ -126,7 +126,7 @@
                   <div class="state-chart">
                     <!-- 차트 사이즈 : 125(px) X 95(px) -->
                     <img
-                      src="https://www.dummyimage.com/125x95/ddd/000.png&amp;text=Chart+Area"
+                      src="https://www.dummyimage.com/125x95/fcfcfc/000.png&amp;text=Chart+Area"
                       alt="퍼블리싱 확인용 더미 이미지"
                       class="dummy-img"
                     />
@@ -145,7 +145,7 @@
                   <div class="state-chart">
                     <!-- 차트 사이즈 : 125(px) X 95(px) -->
                     <img
-                      src="https://www.dummyimage.com/125x95/ddd/000.png&amp;text=Chart+Area"
+                      src="https://www.dummyimage.com/125x95/fcfcfc/000.png&amp;text=Chart+Area"
                       alt="퍼블리싱 확인용 더미 이미지"
                       class="dummy-img"
                     />
@@ -164,7 +164,7 @@
                   <div class="state-chart">
                     <!-- 차트 사이즈 : 125(px) X 95(px) -->
                     <img
-                      src="https://www.dummyimage.com/125x95/ddd/000.png&amp;text=Chart+Area"
+                      src="https://www.dummyimage.com/125x95/fcfcfc/000.png&amp;text=Chart+Area"
                       alt="퍼블리싱 확인용 더미 이미지"
                       class="dummy-img"
                     />
