--- a/base/html/map_main.html
+++ b/base/html/map_main.html
@@ -44,14 +44,18 @@
             <input type="hidden" name="" />
             <div class="default text">서울시 공릉동</div>
             <div class="menu">
-              <div class="item" data-value="">서울시 공릉동하나</div>
-              <div class="item" data-value="">서울시 서초구두울울</div>
-              <div class="item" data-value="">서울시 금천구</div>
-              <div class="item" data-value="">서울시 금천구</div>
-              <div class="item" data-value="">서울시 금천구</div>
-              <div class="item" data-value="">서울시 금천구</div>
-              <div class="item" data-value="">서울시 금천구</div>
-              <div class="item" data-value="">서울시 금천구</div>
+              <!-- 230916 수정 : div 추가 및 button요소로 변경 -->
+              <div class="inner">
+                <button type="button" class="item">서울시 공릉동하나</button>
+                <button type="button" class="item">서울시 서초구두울울</button>
+                <button type="button" class="item">서울시 금천구</button>
+                <button type="button" class="item">서울시 금천구</button>
+                <button type="button" class="item">서울시 금천구</button>
+                <button type="button" class="item">서울시 금천구</button>
+                <button type="button" class="item">서울시 금천구</button>
+                <button type="button" class="item">서울시 금천구</button>
+              </div>
+              <!-- //inner -->
               <a href="#" class="area-setting">기본 구역 설정</a>
             </div>
           </div>
