--- a/base/html/map_main2.html
+++ b/base/html/map_main2.html
@@ -356,7 +356,7 @@
                       <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
                     </span>
                   </li>
-                  <li>
+                  <li class="read">
                     <p class="txt">
                       <span>12:30:08</span>
                       <em>태릉 - 공릉역사거리</em>
