--- a/base/html/real_time_outbreak.html
+++ b/base/html/real_time_outbreak.html
@@ -46,7 +46,7 @@
                 </ul>
                 <em class="outbreak-type reverse-run">역주행</em>
               </button>
-              <button type="button" class="btn-item">
+              <button type="button" class="btn-item active">
                 <ul class="data-list">
                   <li>
                     <em>일시</em>
@@ -80,9 +80,26 @@
                 </ul>
                 <em class="outbreak-type walker">보행자</em>
               </button>
+              <button type="button" class="btn-item">
+                <ul class="data-list">
+                  <li>
+                    <em>일시</em>
+                    <span>2023-08-06 16:30:12</span>
+                  </li>
+                  <li>
+                    <em>구역</em>
+                    <span>서울시 금천구</span>
+                  </li>
+                  <li>
+                    <em>지점</em>
+                    <span>에이스하이엔드타워 앞</span>
+                  </li>
+                </ul>
+                <em class="outbreak-type other">Other</em>
+              </button>
             </div>
             <!-- //real-time-outbreak-item -->
-            <div class="paging-group">
+            <!-- <div class="paging-group">
               <a href="#" class="btn-first"><span class="screen-out">맨앞</span></a>
               <a href="#" class="btn-prev"><span class="screen-out">이전</span></a>
               <a href="#" class="active">1</a>
@@ -92,7 +109,7 @@
               <a href="#">5</a>
               <a href="#" class="btn-next"><span class="screen-out">다음</span></a>
               <a href="#" class="btn-end"><span class="screen-out">맨끝</span></a>
-            </div>
+            </div> -->
             <!-- //paging-group -->
           </section>
           <!-- //real-time-outbreak-list -->
@@ -169,7 +186,8 @@
                 </div>
                 <!-- //unexpected-scene-header -->
                 <div class="unexpected-scene-body">
-                  <img src="/base/images/road-photo1.png" alt="돌발 현장 사진" />
+                  <span class="default-state"><em class="screen-out">스냅/영상 대기중</em></span>
+                  <!-- <img src="/base/images/road-photo1.png" alt="돌발 현장 사진" /> -->
                 </div>
                 <!-- //unexpected-scene-body -->
               </div>
@@ -183,7 +201,8 @@
                 </div>
                 <!-- //scene-cctv-header -->
                 <div class="scene-cctv-body">
-                  <img src="/base/images/road-photo2.png" alt="현장 실시간 CCTV 사진" />
+                  <span class="default-state"><em class="screen-out">CCTV 대기중</em></span>
+                  <!-- <img src="/base/images/road-photo2.png" alt="현장 실시간 CCTV 사진" /> -->
                 </div>
                 <!-- //scene-cctv-body -->
               </div>
