--- a/base/html/camera_list.html
+++ b/base/html/camera_list.html
@@ -26,7 +26,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">교차로</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">시스템 관리</div>
+              <div class="section">시스템 관리</div>
               <i class="right angle icon divider"></i>
               <div class="active section">카메라 관리</div>
             </div>
