--- a/base/html/check_equipment_list2.html
+++ b/base/html/check_equipment_list2.html
@@ -28,8 +28,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">시스템 관리</span>
               <i class="right angle icon divider"></i>
-              <!-- 230821 is-active 클래스 추가 -->
-              <div class="is-active section">장비 상태 조회</div>
+              <div class="section">장비 상태 조회</div>
               <i class="right angle icon divider"></i>
               <div class="active section">이력 조회</div>
             </div>
