--- a/base/html/crossroads_roi_set_tab.html
+++ b/base/html/crossroads_roi_set_tab.html
@@ -729,7 +729,11 @@
       <main class="ly-container">
         <!-- temp-map 클래스명 : 퍼블리싱 작업 확인용 -->
         <!-- 230821 type2 클래스 추가 -->
-        <div id="map1" class="ly-map type2 temp-map"></div>
+        <div id="map1" class="ly-map type2 temp-map">
+          <video autoplay loop muted width="100%" height="100%">
+            <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
+          </video>
+        </div>
         <!-- //ly-map -->
       </main>
       <!-- //ly-container -->
