--- a/base/html/index.html
+++ b/base/html/index.html
@@ -322,7 +322,7 @@
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
-                          <td class="col-2depth">교차로 상세</td>
+                          <td class="col-2depth">교차로 상세(분할 화면 4개)</td>
                           <td class="col-3depth"></td>
                           <td class="col-4depth"></td>
                           <td class="col-5depth"></td>
@@ -331,11 +331,21 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo">
-                            <ul style="font-weight: bold">
-                              <li>- 분할 화면</li>
-                            </ul>
-                          </td>
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">교차로 상세(분할 화면 9개)</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/map_crossroad_view3.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
