--- a/base/html/index.html
+++ b/base/html/index.html
@@ -252,6 +252,20 @@
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
+                          <td class="col-2depth">교차로 현황 (case2)</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/dashboard_cr_status2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
                           <td class="col-2depth">횡단보도 현황</td>
                           <td class="col-3depth"></td>
                           <td class="col-4depth"></td>
@@ -302,6 +316,7 @@
                             <ul style="font-weight: bold">
                               <li>- 교차로 클릭시 노출되는 팝업(돌발 발생 case)</li>
                               <li>- 돌발/장애 TAB팝업</li>
+                              <li>- 각도조정 팝업</li>
                             </ul>
                           </td>
                         </tr>
@@ -343,7 +358,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/map_crossroad_view3.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -752,6 +767,20 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/admin_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">알림 설정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/admin_noti.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
