--- a/base/html/map_main2.html
+++ b/base/html/map_main2.html
@@ -479,6 +479,25 @@
             </div>
           </div>
           <!-- //sudden-snapshot-popup -->
+
+          <!-- 각도조정 팝업 -->
+          <div class="angle-adjust-popup" style="top: 300px; left: 550px">
+            <button type="button" class="btn-close">
+              <span class="screen-out">팝업 닫기</span>
+            </button>
+            <dl>
+              <dt>각도조정</dt>
+              <dd>
+                <p>하단 원을 회전시키거나<br />원 중앙에서 값을 입력하세요.</p>
+                <span>(0~360)</span>
+              </dd>
+            </dl>
+            <div class="angle-adjust-container">
+              <img src="/base/images/temp/angle_adjust.png" alt="샘플 이미지" />
+            </div>
+            <!-- //angle-adjust-container -->
+          </div>
+          <!-- //angle-adjust-popup -->
         </div>
         <!-- //ly-map -->
       </main>
