--- a/base/html/admin_list.html
+++ b/base/html/admin_list.html
@@ -57,10 +57,11 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table">
+              <table class="ui very basic table is-fncbtn">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
+                  <col />
                   <col />
                   <col />
                   <col />
@@ -80,6 +81,7 @@
                     <th>이름</th>
                     <th>이메일 주소</th>
                     <th>전화번호</th>
+                    <th>알림 설정</th>
                     <th>수정일시</th>
                   </tr>
                 </thead>
@@ -96,6 +98,7 @@
                     <td>관리자</td>
                     <td>admin@admin.com</td>
                     <td>02-1555-5666</td>
+                    <td><a href="#" class="ui secondary basic button c-gray rounded">설정</a></td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
                   <tr>
@@ -110,6 +113,7 @@
                     <td>관리자</td>
                     <td>admin@admin.com</td>
                     <td>02-1555-5666</td>
+                    <td><a href="#" class="ui secondary basic button c-gray rounded">설정</a></td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
                 </tbody>
