--- a/base/html/crossroads_stats_primitive.html
+++ b/base/html/crossroads_stats_primitive.html
@@ -109,27 +109,32 @@
                       <th rowspan="2">대기행렬(m)</th>
                       <th rowspan="2">점유율<br />(%)</th>
                       <th rowspan="2">교통량(대)</th>
-                      <th colspan="5">직진 교통량</th>
-                      <th colspan="5">좌회전 교통량</th>
-                      <th colspan="5">우회전 교통량</th>
-                      <th colspan="5">유턴 교통량</th>
+                      <!-- 230920 : colspan 수정 -->
+                      <th colspan="6">직진 교통량</th>
+                      <th colspan="6">좌회전 교통량</th>
+                      <th colspan="6">우회전 교통량</th>
+                      <th colspan="6">유턴 교통량</th>
                     </tr>
+                    <!-- 230920 : 여백을 위해 비어있는 th 추가 -->
                     <tr>
                       <th>소형</th>
                       <th>버스</th>
                       <th>트럭</th>
                       <th>트레일러</th>
                       <th>이륜차</th>
+                      <th class="spacing"></th>
                       <th>소형</th>
                       <th>버스</th>
                       <th>트럭</th>
                       <th>트레일러</th>
                       <th>이륜차</th>
+                      <th class="spacing"></th>
                       <th>소형</th>
                       <th>버스</th>
                       <th>트럭</th>
                       <th>트레일러</th>
                       <th>이륜차</th>
+                      <th class="spacing"></th>
                       <th>소형</th>
                       <th>버스</th>
                       <th>트럭</th>
