--- a/base/html/search_main.html
+++ b/base/html/search_main.html
@@ -134,9 +134,9 @@
         </section>
         <!-- //search-view-body -->
 
-        <button type="button" class="btn-search-view">
+        <!-- <button type="button" class="btn-search-view">
           <span class="screen-out">교차로 상세 열기/닫기 버튼</span>
-        </button>
+        </button> -->
         <!-- //btn-search-view -->
       </div>
       <!-- //search-view-container -->
