--- a/base/html/common/primitive_table_data.html
+++ b/base/html/common/primitive_table_data.html
@@ -1,3 +1,4 @@
+<!-- 230920 : 여백을 위해 비어있는 td 추가 -->
 <tr>
   <td>1</td>
   <td>2021-06-07 12:31:33</td>
@@ -14,16 +15,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -46,16 +50,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -78,16 +85,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -110,16 +120,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -142,16 +155,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -174,16 +190,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -206,16 +225,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -238,16 +260,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -270,16 +295,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -302,16 +330,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -334,16 +365,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -366,16 +400,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -398,16 +435,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -430,16 +470,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -462,16 +505,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -494,16 +540,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -526,16 +575,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -558,16 +610,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -590,16 +645,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -622,16 +680,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -654,16 +715,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -686,16 +750,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -718,16 +785,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -750,16 +820,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -782,16 +855,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -814,16 +890,19 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
