--- a/base/html/crossroads_stats_main.html
+++ b/base/html/crossroads_stats_main.html
@@ -268,12 +268,16 @@
                       <!-- //selectbox-wrap -->
                     </header>
                     <div class="chart-container">
-                      <!-- 차트 크기 272(px) x 272(px) -->
-                      <img
-                        src="https://www.dummyimage.com/272x272/f9f9f9/000.png&amp;text=Chart+Area"
-                        alt="퍼블리싱 확인용 더미 이미지"
-                        class="dummy-img"
-                      />
+                      <!-- 230920 div 추가 -->
+                      <div class="chart-inner">
+                        <!-- 차트 크기 272(px) x 272(px) -->
+                        <img
+                          src="https://www.dummyimage.com/272x272/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                      <!-- //chart-inner -->
                     </div>
                     <!-- //chart-container -->
                   </section>
