--- a/base/html/index.html
+++ b/base/html/index.html
@@ -364,6 +364,20 @@
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">교차로 상세 + 검색 화면</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/map_crossroad_search.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth">프로필 수정</td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
