--- a/base/html/common/primitive_table_data.html
+++ b/base/html/common/primitive_table_data.html
@@ -10,11 +10,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -33,6 +28,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>2</td>
@@ -45,11 +47,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -68,6 +65,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>3</td>
@@ -80,11 +84,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -103,6 +102,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>4</td>
@@ -115,11 +121,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -138,6 +139,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>5</td>
@@ -150,11 +158,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -173,6 +176,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>6</td>
@@ -185,11 +195,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -208,6 +213,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>7</td>
@@ -220,11 +232,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -243,6 +250,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>8</td>
@@ -255,11 +269,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -278,6 +287,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>9</td>
@@ -290,11 +306,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -313,6 +324,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>10</td>
@@ -325,11 +343,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -348,6 +361,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>11</td>
@@ -360,11 +380,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -383,6 +398,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>12</td>
@@ -395,11 +417,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -418,6 +435,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>13</td>
@@ -430,11 +454,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -453,6 +472,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>14</td>
@@ -465,11 +491,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -488,6 +509,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>15</td>
@@ -500,11 +528,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -523,6 +546,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>16</td>
@@ -535,11 +565,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -558,6 +583,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>17</td>
@@ -570,11 +602,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -593,6 +620,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>18</td>
@@ -605,11 +639,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -628,6 +657,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>19</td>
@@ -640,11 +676,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -663,6 +694,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>20</td>
@@ -675,11 +713,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -698,6 +731,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>21</td>
@@ -710,11 +750,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -733,6 +768,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>22</td>
@@ -745,11 +787,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -768,6 +805,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>23</td>
@@ -780,11 +824,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -803,6 +842,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>24</td>
@@ -815,11 +861,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -838,6 +879,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>25</td>
@@ -850,11 +898,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -873,6 +916,13 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
 <tr>
   <td>26</td>
@@ -885,11 +935,6 @@
   <td>19</td>
   <td>50%</td>
   <td>000</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
-  <td class="model">00</td>
   <td class="spacing"></td>
   <td class="model">00</td>
   <td class="model">00</td>
@@ -908,4 +953,11 @@
   <td class="model">00</td>
   <td class="model">00</td>
   <td class="model">00</td>
+  <td class="spacing"></td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="model">00</td>
+  <td class="spacing"></td>
 </tr>
